cmake_minimum_required(VERSION 3.8)
project(jfsdk)

link_directories(fsdk ./lib/jf_lib ./lib/k_lib ./lib/v_lib ./cmake-build-debug)
link_directories(jfsdk_k ./lib/k_lib /usr/lib /usr/local/lib)
link_directories(jfsdk_v ./lib/v_lib /usr/lib /usr/local/lib)
include_directories(/opt/Qt5.9.7/5.9.7/gcc_64/include ./include)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g -fPIC -pie -fsanitize=thread")
set(SOURCE_FILES ./src/JF_Class.cpp ./src/common_func.cpp ./src/Config.cpp ./include/jf_inc/JF_Class.h )
add_library(jfsdk SHARED ${SOURCE_FILES})
add_library(jfsdk_k SHARED ./src/JF_K_Class.cpp ./src/common_func.cpp ./src/Config.cpp ./include/jf_inc/JF_K_Class.h)
add_library(jfsdk_v SHARED ./src/JF_V_Class.cpp ./src/common_func.cpp ./src/Config.cpp ./include/jf_inc/JF_V_Class.h)
#add_executable(libjfsdk_k SHARED ./src/JF_K_Class.cpp ./include/jf_inc/JF_K_Class.h)
#add_executable(libjfsdk_v SHARED ./src/JF_V_Class.cpp ./include/jf_inc/JF_V_Class.h)
target_link_libraries(jfsdk libjfsdk_k.so libjfsdk_v.so libdhnetsdk.so libhcnetsdk.so libdhplay.so libdhconfigsdk.so liblog4cplus.so LOG)
target_link_libraries(jfsdk_k libdhnetsdk.so libdhconfigsdk.so liblog4cplus.so LOG)
target_link_libraries(jfsdk_v libhcnetsdk.so libsadp.so liblog4cplus.so LOG)